--- a/frontend/src/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/frontend/src/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -1,7 +1,7 @@
 .profile__edit-btn {
 	padding: 12px 12px;
     border: 1px solid #fff;
-    background-image: url(/static/media/edit-btn.6bfdb354.svg);
+    background-image: url('../../../images/button/edit-btn.svg');
     background-color: #000;
     background-repeat: no-repeat;
     background-position: center;
